tests/fsharp/typecheck/sigs/neg38.bsl

neg38.fs(6,1,6,1): parse error FS0010: Incomplete structured construct at or before this point in definition. Expected '=' or other token.
