tests/fsharp/typecheck/sigs/neg38.fs
module Neg38a

module Neg38b


